# skypro20250123

./: .flake8  README.md  main.py  pyproject.toml  readme.md
src/: masks.py  processing.py  widget.py
